--- a/src/shared/layout/landing-layout/about-layout/about-layout.component.html
+++ b/src/shared/layout/landing-layout/about-layout/about-layout.component.html
@@ -1,6 +1,7 @@
 <div
   class="margin-0-auto"
   smartiScrollSection="about"
+  id="about"
 >
   <div class="smarti-heading-text bright-turquoise-text-500">אודות Smarti</div>
   <div class="smarti-describing-text white-text">
