--- a/src/shared/layout/landing-layout/blog-layout/blog-layout.component.html
+++ b/src/shared/layout/landing-layout/blog-layout/blog-layout.component.html
@@ -1,6 +1,7 @@
 <div
   class="bg-white blog-heading inline-block relative"
   smartiScrollSection="blog"
+  id="blog"
 >
   <div class="mt-24">
     <div class="smarti-heading-text bright-turquoise-text-500">בלוג</div>
@@ -9,17 +10,17 @@
   <div class="blog flex justify-evenly">
     <div class="blog__item flex flex-col rounded-l box-shadow-big">
       <div class="pension-simple"></div>
-      <h3 class="medium dir-rtl blog__item__text neutrals-text-950">Pension, insurance in simple words</h3>
+      <h3 class="medium dir-rtl blog__item__text neutrals-text-950">פנסיה וביטוח במילים פשוטות</h3>
       <h4 class="dir-rtl medium mt-2 text-end ml-5 bright-turquoise-text-500 cursor-pointer">בקרוב...</h4>
     </div>
     <div class="blog__item flex flex-col rounded-l box-shadow-big">
       <div class="technological-system"></div>
-      <h3 class="medium dir-rtl blog__item__text neutrals-text-950">Advantages of technological systems</h3>
+      <h3 class="medium dir-rtl blog__item__text neutrals-text-950">יתרונות המערכות הטכנולוגיות</h3>
       <h4 class="dir-rtl medium mt-2 text-end ml-5 bright-turquoise-text-500 cursor-pointer">בקרוב...</h4>
     </div>
     <div class="blog__item flex flex-col rounded-l box-shadow-big">
       <div class="setting-out-your-own"></div>
-      <h3 class="medium dir-rtl blog__item__text neutrals-text-950">Setting out on your own?</h3>
+      <h3 class="medium dir-rtl blog__item__text neutrals-text-950">יוצאים לדרך לבד?</h3>
       <h4 class="dir-rtl medium mt-2 text-end ml-5 bright-turquoise-text-500 cursor-pointer">בקרוב...</h4>
     </div>
   </div>
