--- a/src/shared/layout/landing-layout/footer/footer.component.html
+++ b/src/shared/layout/landing-layout/footer/footer.component.html
@@ -1,7 +1,4 @@
-<div
-  class="footer"
-  smartiScrollSection="footer"
->
+<div class="footer">
   <div class="flex">
     <div class="logo-big-h33 margin-start-auto mt-16"></div>
   </div>
@@ -16,7 +13,7 @@
     <div class="footer__info-item">
       <h4 class="medium dir-rtl white-text mt-0 mb-0">תמיכה</h4>
       <div class="paragraph-text dir-rtl white-text mt-6">תנאי שימוש</div>
-      <div class="paragraph-text dir-rtl white-text">מידניות הפרטיות</div>
+      <div class="paragraph-text dir-rtl white-text">מדיניות הפרטיות</div>
     </div>
     <div class="footer__info-item">
       <h4 class="medium dir-rtl white-text mt-0 mb-0">פתרונות</h4>
