--- a/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
@@ -1,4 +1,7 @@
-<div smartiScrollSection="banner">
+<div
+  smartiScrollSection="banner"
+  id="banner"
+>
   <div class="main-banner flex justify-center items-center">
     <div class="main-banner__block">
       <div class="main-banner__block__text text-center display-text white-text">
