--- a/src/shared/ui/button/button.component.html
+++ b/src/shared/ui/button/button.component.html
@@ -30,7 +30,9 @@
       *ngIf="hasFileIconLeft"
       class="document-download-small-icon-12 mr-1"
     ></div>
+
     {{ text }}
+
     <div
       *ngIf="hasFileIconRight"
       class="document-download-small-icon-12 ml-1"
@@ -50,6 +52,11 @@
     <div
       *ngIf="hasSaveIcon"
       class="save-icon-20 ml-2"
+    ></div>
+
+    <div
+      *ngIf="hasFromRightArrowLeftIcon"
+      class="arrow-left-dark-16 ml-2"
     ></div>
   </button>
 </div>
