fix bug with searching inputs and ui components. fix bugs 1300, 1302

--- a/src/features/progress-bar/progress-bar.component.html
+++ b/src/features/progress-bar/progress-bar.component.html
@@ -1,5 +1,5 @@
 <div class="progress-bar flex flex-col mt-6">
-  <div class="caption-text neutrals-text-950 margin-start-auto">Registration progress</div>
+  <div class="caption-text neutrals-text-950 margin-start-auto">תהליך הרשמה</div>
   <div class="progress-bar__content flex rounded-l">
     <div
       [ngClass]="counter.ten === 'fill' ? 'progress-bar__content__item-fill' : 'progress-bar__content__item'"
