--- a/src/shared/layout/dashboard-layout/dashboard-cash-register/dashboard-cash-register.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-cash-register/dashboard-cash-register.component.html
@@ -27,6 +27,7 @@
           [placeholder]="'Search employee'"
           [customWidth]="'450px'"
           [customBorderBottom]="'1px solid #4F5F7A'"
+          [control]="controlSearch"
         ></smarti-input-search>
       </div>
     </div>
