--- a/src/shared/layout/dashboard-layout/dashboard-employer/dashboard-employer.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-employer/dashboard-employer.component.html
@@ -39,6 +39,7 @@
           [placeholder]="'Search'"
           [customWidth]="'450px'"
           [customBorderBottom]="'1px solid #4F5F7A'"
+          [control]="controlSearch"
         ></smarti-input-search>
       </div>
     </div>
