--- a/src/features/registration-form/form-container/personal-info/personal-info.component.html
+++ b/src/features/registration-form/form-container/personal-info/personal-info.component.html
@@ -2,7 +2,7 @@
   class="flex flex-col items-center mt-10"
   [formGroup]="personalInfoForm"
 >
-  <h3 class="medium mt-10 mb-0 text-center neutrals-text-950">צור חשבון!</h3>
+  <h3 class="medium mt-10 mb-0 text-center neutrals-text-950 dir-rtl">צור חשבון!</h3>
   <div class="personal-info mt-8">
     <smarti-input-field
       [customWidth]="'536px'"
