--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -9,7 +9,7 @@
     <div class="flex justify-between">
       <div class="seated-working-woman-img"></div>
       <h1 class="medium text-right self-center neutrals-text-950">
-        <div>התחברות</div>
+        <div>להרשמה</div>
       </h1>
     </div>
     <smarti-login-form></smarti-login-form>
