--- a/src/pages/registration/registration.component.html
+++ b/src/pages/registration/registration.component.html
@@ -19,8 +19,7 @@
         *ngIf="changeImageStep !== 'verifyEmailInfo'; else verifyEmailInfoHeaderTemplate"
         class="medium text-right self-center neutrals-text-950"
       >
-        <div>תודה שבחרתם</div>
-        <div>Smarti</div>
+        תודה שבחרתם Smarti
       </h1>
       <ng-template #verifyEmailInfoHeaderTemplate>
         <h1 class="medium text-right self-center neutrals-text-950">אימות חשבון</h1>
