--- a/src/shared/layout/dashboard-layout/dashboard-processes/dashboard-processes.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-processes/dashboard-processes.component.html
@@ -46,6 +46,7 @@
           [placeholder]="'Search'"
           [customWidth]="'450px'"
           [customBorderBottom]="'1px solid #4F5F7A'"
+          [control]="controlSearch"
         ></smarti-input-search>
       </div>
     </div>
