add new api to dashboard process detail and main page, add new helpers and entities, fix bugs with typing and searching

--- a/src/shared/dialog/add-documents-dialog/add-documents-dialog.component.html
+++ b/src/shared/dialog/add-documents-dialog/add-documents-dialog.component.html
@@ -4,6 +4,7 @@
     <smarti-select
       [placeholder]="'סוג מסמך'"
       [customWidth]="'536px'"
+      [options]="documentTypeOption"
       [control]="documentTypeControl"
     ></smarti-select>
   </div>
