--- a/src/shared/layout/dashboard-layout/dashboard-processes/processes-detail/processes-detail-information/processes-detail-information.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-processes/processes-detail/processes-detail-information/processes-detail-information.component.html
@@ -1,9 +1,12 @@
 <div class="h-41 w-full mt-4 box-shadow-big rounded-l bg-white">
-  <div class="flex flex-row items-center gap-3 ml-6">
+  <div
+    *ngIf="detailInformation$ | async as info"
+    class="flex flex-row items-center gap-3 ml-6"
+  >
     <div class="h-37 border-neutrals-20 rounded-m mt-2">
       <div class="p-2 flex flex-col w-51">
         <div class="pr-2 paragraph-text neutrals-text-300 dir-rtl">מספר קבצים:</div>
-        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">7</div>
+        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">{{ emptyData ? "--" : "test" }}</div>
         <div
           class="mr-2 ml-7 mt-11 py-2 px-4 bg-neutrals-20 rounded-m flex flex-row items-center w-fit-content self-end"
         >
@@ -15,7 +18,7 @@
     <div class="h-37 border-neutrals-20 rounded-m mt-2">
       <div class="p-2 flex flex-col w-51">
         <div class="pr-2 paragraph-text neutrals-text-300 dir-rtl">חודש שכר:</div>
-        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">05</div>
+        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">--</div>
         <div
           class="ml-7 mt-11 mr-3 py-2 px-4 bg-neutrals-20 rounded-m flex flex-row items-center w-fit-content self-end"
         >
@@ -27,7 +30,7 @@
     <div class="h-37 border-neutrals-20 rounded-m mt-2">
       <div class="p-2 flex flex-col w-51">
         <div class="pr-2 paragraph-text neutrals-text-300 dir-rtl">מספר תהליך:</div>
-        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">271141</div>
+        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">--</div>
         <div class="mr-2 mt-11 py-2 px-4 bg-neutrals-20 rounded-m flex flex-row items-center w-fit-content self-end">
           <div class="arrow-left-dark-12 mr-1"></div>
           <div class="button-text-small neutrals-text-950">ארכיון מסמכים ואסמכתאות</div>
@@ -37,37 +40,37 @@
     <div class="h-37 border-neutrals-20 rounded-m mt-2">
       <div class="p-2 flex flex-col w-51">
         <div class="pr-2 paragraph-text neutrals-text-300 dir-rtl">שם התהליך:</div>
-        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">מאי 2023</div>
+        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">--</div>
         <div class="pr-2 mt-1 paragraph-text neutrals-text-300 dir-rtl">תצהיר:</div>
-        <div class="pr-2 mt-4 medium-text neutrals-text-950 text-end">לא קיים</div>
+        <div class="pr-2 mt-4 medium-text neutrals-text-950 text-end">--</div>
       </div>
     </div>
     <div class="h-37 border-neutrals-20 rounded-m mt-2">
       <div class="p-2 flex flex-col w-51">
         <div class="pr-2 paragraph-text neutrals-text-300 dir-rtl">ח.פ:</div>
-        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">510876972</div>
+        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">--</div>
         <div class="pr-2 mt-1 paragraph-text neutrals-text-300 dir-rtl">מספר עובדים:</div>
         <div class="pr-2 mt-1 flex justify-end medium-text">
-          <div class="block-w64-h28 px-4 py-2 text-center rounded-2ls neutrals-text-950 bg-neutrals-20">7</div>
+          <div class="block-w64-h28 px-4 py-2 text-center rounded-2ls neutrals-text-950 bg-neutrals-20">-</div>
         </div>
       </div>
     </div>
     <div class="h-37 border-neutrals-20 rounded-m mt-2">
       <div class="p-2 flex flex-col w-51">
         <div class="pr-2 paragraph-text neutrals-text-300 dir-rtl">שם מחלקה:</div>
-        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">כללי</div>
+        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">--</div>
         <div class="pr-2 mt-1 paragraph-text neutrals-text-300 dir-rtl">מספר רשומות:</div>
         <div class="pr-2 mt-1 flex justify-end medium-text">
-          <div class="block-w64-h28 px-4 py-2 text-center rounded-2ls neutrals-text-950 bg-neutrals-20">20</div>
+          <div class="block-w64-h28 px-4 py-2 text-center rounded-2ls neutrals-text-950 bg-neutrals-20">--</div>
         </div>
       </div>
     </div>
     <div class="h-37 border-neutrals-20 rounded-m mt-2">
       <div class="p-2 flex flex-col w-51">
         <div class="pr-2 paragraph-text neutrals-text-300 dir-rtl">שם המעסיק:</div>
-        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">הילוך שמיני בע"מ</div>
+        <div class="pr-2 mt-1 medium-text neutrals-text-950 text-end">--</div>
         <div class="pr-2 mt-1 paragraph-text neutrals-text-300 dir-rtl">סכום לתשלום:</div>
-        <div class="pr-2 mt-4 medium-text neutrals-text-950 text-end">34,538.75</div>
+        <div class="pr-2 mt-4 medium-text neutrals-text-950 text-end">--</div>
       </div>
     </div>
   </div>
