--- a/src/shared/layout/landing-layout/questions-banner-layout/questions-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/questions-banner-layout/questions-banner-layout.component.html
@@ -5,14 +5,17 @@
     <smarti-input-field
       [placeholder]="'Phone number'"
       [customWidth]="'536px'"
+      [control]="phone"
     ></smarti-input-field>
     <smarti-input-field
       [placeholder]="'*Email address'"
       [customWidth]="'536px'"
+      [control]="email"
     ></smarti-input-field>
     <smarti-input-field
       [placeholder]="'Your name'"
       [customWidth]="'536px'"
+      [control]="name"
     ></smarti-input-field>
   </div>
 
@@ -21,5 +24,6 @@
     [text]="'צרו קשר'"
     [typeClass]="'interaction'"
     [textColor]="'white'"
+    (buttonClicked)="sendCreateLeadRequest()"
   ></smarti-button>
 </div>
