add user data in storage. fix dashboard home page information

--- a/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.html
@@ -4,8 +4,8 @@
     <div class="flex flex-row justify-end gap-270px">
       <smarti-home-switchers-filters></smarti-home-switchers-filters>
       <div>
-        <h3 class="neutrals-text-950 mt-0 mb-0 text-right">Good Morning</h3>
-        <h3 class="medium mt-2 neutrals-text-950 mt-0 mb-0 text-right">User Name</h3>
+        <h3 class="neutrals-text-950 mt-0 mb-0 text-right">Good {{ dayMessage }}</h3>
+        <h3 class="medium mt-2 neutrals-text-950 mt-0 mb-0 text-right">{{ userName }}</h3>
         <h4 class="bg-white mt-8 mb-0 py-1 px-2 rounded-ls bright-turquoise-text-500 w-fit-content">
           {{ getDayOfWeekAndCurrentDayDate() }}
         </h4>
