fix with loading data process in dashboard home page and what showing if data empty

--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -291,3 +291,15 @@
   width: 392px;
   height: 336px;
 }
+
+.no-notifications-icon {
+  background: url("/assets/svg/no-comments.svg");
+  width: 268px;
+  height: 268px;
+}
+
+.men-with-flower-icon {
+  background: url("/assets/svg/men-with-flower.svg");
+  width: 91px;
+  height: 83px;
+}
