--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -90,6 +90,10 @@
   margin-top: 96px;
 }
 
+.mt-25 {
+  margin-top: 100px;
+}
+
 .mt-28 {
   margin-top: 112px;
 }
@@ -104,6 +108,14 @@
 
 .mt-40 {
   margin-top: 160px;
+}
+
+.mt-42 {
+  margin-top: 168px;
+}
+
+.mt-44 {
+  margin-top: 176px;
 }
 
 .mt-56 {
@@ -179,12 +191,24 @@
   margin-bottom: 128px;
 }
 
+.mb-33 {
+  margin-bottom: 132px;
+}
+
 .mb-34 {
   margin-bottom: 136px;
 }
 
 .mb-39 {
   margin-bottom: 154px;
+}
+
+.mb-50 {
+  margin-bottom: 200px;
+}
+
+.mb-52 {
+  margin-bottom: 208px;
 }
 
 /* margin-right */
