--- a/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.scss
+++ b/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.scss
@@ -36,3 +36,13 @@
   width: 316px;
   background: white;
 }
+
+.dashboard-home-left-block {
+  width: 316px;
+}
+
+.dashboard-home-need-help-block {
+  margin: 64px 24px;
+  width: 268px;
+  height: 264px;
+}
