--- a/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.html
@@ -1,5 +1,27 @@
 <div class="w-full flex flex-row justify-between gap-6">
-  <smarti-dashboard-notification></smarti-dashboard-notification>
+  <div class="dashboard-home-left-block">
+    <h3 class="medium neutrals-text-950 mt-10 mb-0 mr-8 dir-rtl">Notifications:</h3>
+    <ng-container *ngIf="notifications$ | async as notifications; else loadingNotificationTemplate">
+      <smarti-dashboard-notification [notifications]="notifications"></smarti-dashboard-notification>
+    </ng-container>
+    <div class="dashboard-home-need-help-block bg-neutrals-950 rounded-l">
+      <h3 class="medium text-center white-text mt-6 mb-0 inline-block w-full">Need Help</h3>
+      <div class="paragraph-text-medium white-text text-center mt-4 mr-4 ml-4">
+        <div>Do you have a question or concern?</div>
+        <div>Your personal assistant is always there for you</div>
+      </div>
+      <div class="mt-4">
+        <smarti-button
+          [typeClass]="'interaction'"
+          [text]="'Contact Agent'"
+          [customButtonWidth]="'177px'"
+          [customHeight]="'42px'"
+          [paragraphTextExtra]="true"
+        ></smarti-button>
+      </div>
+    </div>
+  </div>
+
   <div class="mt-4">
     <div class="flex flex-row justify-end gap-270px">
       <smarti-home-switchers-filters></smarti-home-switchers-filters>
@@ -50,6 +72,15 @@
   <div class="w-1398px">
     <smarti-loader
       [size]="'xxl'"
+      [paddingTop30percent]="true"
+    ></smarti-loader>
+  </div>
+</ng-template>
+
+<ng-template #loadingNotificationTemplate>
+  <div class="mt-32 mb-52">
+    <smarti-loader
+      [size]="'xl'"
       [paddingTop30percent]="true"
     ></smarti-loader>
   </div>
