add validation on phone and some other inputs, fix minor bugs with dashboard

--- a/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.html
@@ -55,6 +55,7 @@
         <div class="dashboard-info-grid__footer box-shadow-big rounded-l">
           <smarti-dashboard-home-small-table
             [compensationReport]="compensationReport$ | async"
+            (changeModeEventCode)="onChangeModeEventCode($event)"
           ></smarti-dashboard-home-small-table>
         </div>
       </div>
