rewrite landing page

--- a/src/assets/styles/flex.scss
+++ b/src/assets/styles/flex.scss
@@ -118,6 +118,10 @@
   gap: 143px;
 }
 
+.gap-150px {
+  gap: 150px;
+}
+
 .gap-171px {
   gap: 171px;
 }
@@ -128,6 +132,10 @@
 
 .gap-217px {
   gap: 217px;
+}
+
+.gap-225px {
+  gap: 225px;
 }
 
 .gap-270px {
