--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -98,6 +98,10 @@
   margin-top: 112px;
 }
 
+.mt-30 {
+  margin-top: 120px;
+}
+
 .mt-32 {
   margin-top: 128px;
 }
@@ -153,6 +157,10 @@
 
 .mb-4 {
   margin-bottom: 16px;
+}
+
+.mt-5 {
+  margin-bottom: 20px;
 }
 
 .mb-6 {
