--- a/src/assets/styles/text.scss
+++ b/src/assets/styles/text.scss
@@ -138,6 +138,14 @@ h4 {
   line-height: 24px;
 }
 
+.footer-link-text {
+  font-size: 20px;
+  font-family: Rubik, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
 .paragraph-text {
   font-family: Rubik, sans-serif;
   font-size: 16px;
