--- a/src/shared/layout/landing-layout/about-layout/about-layout.component.html
+++ b/src/shared/layout/landing-layout/about-layout/about-layout.component.html
@@ -5,8 +5,8 @@
 >
   <div class="smarti-heading-text bright-turquoise-text-500">אודות Smarti</div>
   <div class="smarti-describing-text white-text">
-    <div>בית תוכנה המתמחה בפתרונות סליקה</div>
-    <div>פנסיונית ממשק ישיר מול חברות הביטוח, שירות ישיר זמין ואישי</div>
+    <div>בית תוכנה המתמחה בפתרונות סליקה פנסיונית</div>
+    <div>ממשק ישיר מול חברות הביטוח ושירות זמין ואישי</div>
   </div>
 </div>
 
@@ -16,28 +16,28 @@
     (click)="openLeadsDialog(firstLeadsDialogTemplate)"
   >
     <div class="first-about-form-image"></div>
-    <h4 class="medium text-center mt-2 white-text">אזור אישי</h4>
+    <h4 class="medium text-center mt-2 white-text">הצטרפות לפנסיה</h4>
   </div>
   <div
     class="about-block-forms__item cursor-pointer"
     (click)="openLeadsDialog(secondLeadsDialogTemplate)"
   >
     <div class="second-about-form-image"></div>
-    <h4 class="medium text-center mt-2 white-text">הכנה לטופס 161</h4>
+    <h4 class="medium text-center mt-2 white-text">טופס 161 החדש</h4>
   </div>
   <div
     class="about-block-forms__item cursor-pointer"
     (click)="openLeadsDialog(thirdLeadsDialogTemplate)"
   >
     <div class="third-about-form-image"></div>
-    <h4 class="medium text-center mt-2 white-text">מנהל תיק אישי</h4>
+    <h4 class="medium text-center mt-2 white-text">ניהול פנסיוני אישי</h4>
   </div>
   <div
     class="about-block-forms__item cursor-pointer"
     (click)="openLeadsDialog(fourthLeadsDialogTemplate)"
   >
     <div class="fourth-about-form-image"></div>
-    <h4 class="medium text-center mt-2 white-text">ממשק נגיש</h4>
+    <h4 class="medium text-center mt-2 white-text">דוח שנתי</h4>
   </div>
 </div>
 
