--- a/src/shared/layout/landing-layout/company-slider-layout/company-slider-layout.component.html
+++ b/src/shared/layout/landing-layout/company-slider-layout/company-slider-layout.component.html
@@ -1,9 +1,8 @@
 <div>
   <div class="mt-40">
-    <div class="smarti-heading-text bright-turquoise-text-500">הלקוחות שלנו מספרים</div>
-    <div class="smarti-describing-text white-text">Top of them</div>
+    <div class="smarti-heading-text bright-turquoise-text-500">הלקוחות שלנו</div>
   </div>
-  <div class="flex justify-between gap-3-5 mt-32">
+  <div class="flex justify-between gap-3-5 mt-30">
     <div
       class="company-list-item rounded-l border-neutrals-800 bg-neutrals-950"
       *ngFor="let _ of ' '.repeat(6).split('')"
