--- a/src/shared/layout/landing-layout/connect-now-layout/connect-now-layout.component.html
+++ b/src/shared/layout/landing-layout/connect-now-layout/connect-now-layout.component.html
@@ -1,10 +1,10 @@
 <div>
   <div class="connect-now-block flex flex-col items-center justify-center rounded-l">
-    <h3 class="connect-now-block__text-block text-center white-text">
-      <div>סמארטי חוסכת לכם זמן וכסף</div>
-      <div>ועוזרת לכם לארגן את קופות הפנסיה והביטוח בחברה</div>
-    </h3>
-    <h3 class="medium text-center mt-8 mb-8 white-text">מבצע! חודש מתנה</h3>
+    <div class="connect-now-block__text-block white-text">
+      <h3 class="medium text-center mt-0 mb-0">Smarti</h3>
+      <h3 class="medium text-center mt-0 mb-0">חוסכת לכם זמן וכסף ועוזרת לכם לארגן את קופות הפנסיה והביטוח בארגון</h3>
+      <h3 class="medium text-center mt-0 mb-8">ויש מבצע חודש מתנה</h3>
+    </div>
     <smarti-button
       [text]="'הצטרפו עכשיו'"
       [typeClass]="'interaction'"
