--- a/src/shared/layout/landing-layout/footer/footer.component.html
+++ b/src/shared/layout/landing-layout/footer/footer.component.html
@@ -1,40 +1,24 @@
 <div class="footer">
-  <div class="flex">
-    <div class="logo-big-h33 margin-start-auto mt-16"></div>
+  <div class="flex flex-row mt-5 mb-8 gap-225px">
+    <div class="logo-big-h33"></div>
+    <div class="footer-link-text dir-rtl white-text ml-150 self-end">צרו קשר</div>
+    <div class="footer-link-text dir-rtl white-text self-end">תמיכה</div>
+    <div class="footer-link-text dir-rtl white-text self-end">פתרונות</div>
   </div>
-  <div class="flex justify-between mt-10">
-    <div class="footer__info-item">
-      <h4 class="medium dir-rtl white-text mt-0 mb-0">צרו קשר</h4>
-      <div class="paragraph-text dir-rtl white-text mt-6">
-        <div>03-6549300 | 03-5228825</div>
-        <div>office@smarti.com</div>
-      </div>
-    </div>
-    <div class="footer__info-item">
-      <h4 class="medium dir-rtl white-text mt-0 mb-0">תמיכה</h4>
-      <div class="paragraph-text dir-rtl white-text mt-6">תנאי שימוש</div>
-      <div class="paragraph-text dir-rtl white-text">מדיניות הפרטיות</div>
-    </div>
-    <div class="footer__info-item">
-      <h4 class="medium dir-rtl white-text mt-0 mb-0">פתרונות</h4>
-      <div class="paragraph-text dir-rtl white-text mt-6">הכנה ל-161</div>
-      <div class="paragraph-text dir-rtl white-text">דוח שנתי</div>
-      <div class="paragraph-text dir-rtl white-text">ניהול פנסיוני שוטף</div>
-    </div>
-    <div class="footer__info-item">
-      <h4 class="medium dir-rtl white-text mt-0 mb-0">Smarti</h4>
-      <div class="paragraph-text dir-rtl white-text mt-6">בלוג</div>
-      <div class="paragraph-text dir-rtl white-text">אודות</div>
-      <div class="paragraph-text dir-rtl white-text">חבילות</div>
-    </div>
+</div>
+<div class="relative bg-neutrals-20 mb-5 flex flex-row justify-center gap-150px h-15">
+  <div class="flex flex-row gap-6 mt-5">
+    <div class="linkedin-black-link-black-22 cursor-pointer"></div>
+    <div class="facebook-square-link-black-22 cursor-pointer"></div>
+    <div class="instagram-link-black-22 cursor-pointer"></div>
   </div>
-  <div class="footer__links flex flex-col justify-start">
-    <h4 class="medium dir-rtl white-text mt-0 mb-0 margin-start-auto">עקוב אחרינו</h4>
-    <div class="footer__links__items flex justify-end gap-6 mt-2">
-      <div class="twitter-link-32"></div>
-      <div class="facebook-link-32"></div>
-      <div class="linkedin-link-32"></div>
-    </div>
+  <div class="mt-5 paragraph-text neutrals-text-950">רחוב התע״ש 10, רמת גן</div>
+  <div class="mt-5 paragraph-text neutrals-text-950">office@smarti.com</div>
+  <div class="mt-5 paragraph-text neutrals-text-950">03-6549300 | 03-5228825</div>
+  <div
+    class="absolute neutrals-text-950 paragraph-text-medium"
+    style="right: 10px; top: 20px"
+  >
+    Ver {{ version }}
   </div>
-  <div class="mt-32 flex flex-row justify-center white-text paragraph-text-medium">Ver {{ version }}</div>
 </div>
