--- a/src/shared/layout/landing-layout/landing-layout.component.html
+++ b/src/shared/layout/landing-layout/landing-layout.component.html
@@ -5,5 +5,5 @@
 <smarti-company-slider-layout></smarti-company-slider-layout>
 <smarti-run-business-layout></smarti-run-business-layout>
 <smarti-employee-management-layout></smarti-employee-management-layout>
-<smarti-blog-layout #blog></smarti-blog-layout>
+<!--<smarti-blog-layout #blog></smarti-blog-layout>-->
 <smarti-questions-banner-layout></smarti-questions-banner-layout>
