--- a/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
@@ -15,10 +15,10 @@
           [textColor]="'white'"
           (buttonClicked)="navigateToRegistration()"
         ></smarti-button>
-        <div class="mt-4 paragraph-text-medium truncate text-center white-text">
-          להמלצה לחברים
-          <span class="bright-turquoise-text-500 cursor-pointer text-underline">לחצו כאן</span>
-        </div>
+        <!--        <div class="mt-4 paragraph-text-medium truncate text-center white-text">-->
+        <!--          להמלצה לחברים-->
+        <!--          <span class="bright-turquoise-text-500 cursor-pointer text-underline">לחצו כאן</span>-->
+        <!--        </div>-->
       </div>
     </div>
   </div>
