--- a/src/shared/layout/landing-layout/run-business-layout/run-business-layout.component.html
+++ b/src/shared/layout/landing-layout/run-business-layout/run-business-layout.component.html
@@ -6,7 +6,7 @@
         נהלו את העסק שלכם חכם ומהיר
       </h1>
       <h4 class="medium mt-0 mb-6 text-center white-text margin-rl-auto run-business__block__right__description">
-        ממשק נגיש שעוזר לכם לנהל את סליקה הפנסיונית בצורה פשוטה ומהירה בכמה צעדים פשוטים
+        סמארטי כאן בממשק נגיש שעוזר לכם לנהל את סליקה הפנסיונית בצורה פשוטה ומהירה בכמה צעדים פשוטים
       </h4>
       <smarti-button
         [text]="'הצטרפו עכשיו'"
