--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -160,6 +160,24 @@
   height: 48px;
 }
 
+.instagram-link-black-22 {
+  background: url("/assets/svg/instagram-black-icon-22.svg");
+  width: 22px;
+  height: 22px;
+}
+
+.facebook-square-link-black-22 {
+  background: url("/assets/svg/facebook-square-black-icon-22.svg");
+  width: 22px;
+  height: 22px;
+}
+
+.linkedin-black-link-black-22 {
+  background: url("/assets/svg/linkedin-black-icon-22.svg");
+  width: 22px;
+  height: 22px;
+}
+
 .twitter-link-32 {
   background: url("/assets/svg/twitter-icon.svg");
   width: 32px;
