--- a/src/shared/layout/landing-layout/employee-management-layout/employee-management-layout.component.html
+++ b/src/shared/layout/landing-layout/employee-management-layout/employee-management-layout.component.html
@@ -1,8 +1,8 @@
 <div class="mt-104">
-  <div class="smarti-heading-text bright-turquoise-text-500">רוצים ליעל את ניהול העובדים שלכם?</div>
+  <div class="smarti-heading-text bright-turquoise-text-500">רוצים לייעל את ניהול העובדים שלכם?</div>
   <div class="smarti-describing-text white-text">
-    <div class="dir-rtl">קבלו את כל הכלים המתאימים שיאפשרו לכם זאת.</div>
-    <div>ניהולי משאבי אנוש בתהליכים דיגיטליים מתקדמים ביותר</div>
+    <div class="dir-rtl">כל הכלים המתאימים שיאפשרו לכם</div>
+    <div>ניהול משאבי אנוש בתהליכים דיגיטליים מתקדמים ביותר</div>
   </div>
   <div class="flex justify-center gap-171px">
     <div class="employee-management-left">
@@ -26,7 +26,7 @@
           <div class="send-icon-28 self-center"></div>
         </div>
         <h4 class="employee-management-left__item__text dir-rtl medium white-text">
-          אפשרות לעובדים לבחור מוצרים פנסיונים
+          אפשרות בחירת מוצר פנסיוני על ידי העובד
         </h4>
       </div>
 
