--- a/src/shared/layout/landing-layout/questions-banner-layout/questions-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/questions-banner-layout/questions-banner-layout.component.html
@@ -1,19 +1,19 @@
 <div class="question-banner-block flex flex-col items-center">
-  <h3 class="medium text-center mt-12 white-text margin-rl-auto mb-0">שאלות ומידע נוסף</h3>
+  <h3 class="medium text-center mt-12 white-text margin-rl-auto mb-0">לשאלות ומידע נוסף</h3>
 
   <div class="flex gap-4 mt-8">
     <smarti-input-field
-      [placeholder]="'Phone number'"
+      [placeholder]="'טלפון*'"
       [customWidth]="'536px'"
       [control]="phone"
     ></smarti-input-field>
     <smarti-input-field
-      [placeholder]="'*Email address'"
+      [placeholder]="'מייל*'"
       [customWidth]="'536px'"
       [control]="email"
     ></smarti-input-field>
     <smarti-input-field
-      [placeholder]="'Your name'"
+      [placeholder]="'שם מלא*'"
       [customWidth]="'536px'"
       [control]="name"
     ></smarti-input-field>
