--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -118,6 +118,12 @@
   height: 24px;
 }
 
+.close-circle-white-24 {
+  background: url("/assets/svg/close-circle-white-24-icon.svg");
+  width: 24px;
+  height: 24px;
+}
+
 .close-cross-24 {
   background: url("/assets/svg/close-cross.svg");
   width: 24px;
