--- a/src/shared/layout/landing-layout/landing-layout.component.html
+++ b/src/shared/layout/landing-layout/landing-layout.component.html
@@ -7,3 +7,15 @@
 <smarti-employee-management-layout></smarti-employee-management-layout>
 <!--<smarti-blog-layout #blog></smarti-blog-layout>-->
 <smarti-questions-banner-layout></smarti-questions-banner-layout>
+<div>
+  <smarti-main-layout-popup
+    [direction]="'left'"
+    class="fixed left-landing-popup"
+  ></smarti-main-layout-popup>
+</div>
+<div>
+  <smarti-main-layout-popup
+    [direction]="'right'"
+    class="fixed right-landing-popup"
+  ></smarti-main-layout-popup>
+</div>
