--- a/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
@@ -1,6 +1,7 @@
 <div
   smartiScrollSection="banner"
   id="banner"
+  class="relative"
 >
   <div class="main-banner flex justify-center items-center">
     <div class="main-banner__block">
