--- a/src/shared/ui/button/button.component.html
+++ b/src/shared/ui/button/button.component.html
@@ -10,6 +10,8 @@
       'button-interaction': typeClass === 'interaction',
       'dark-button': typeClass === 'dark',
       'white-button': typeClass === 'white',
+      'rose-button': typeClass === 'rose',
+      'blue-button': typeClass === 'blue',
       'paragraph-text-extra': paragraphTextExtra,
       'button-text-small': buttonTextSmall,
       'z-10': isNeedZIndex
